[package]
name = "panopticon"
version = "0.1.0"
authors = ["Steven Kipp <sk1pp@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipinfo = "0.1"
druid = { git = "https://github.com/linebender/druid.git", features = ["im"]}
im = { version = "*", features = ["proptest", "serde"] }
