[package]
name = "panopticon"
version = "0.1.0"
authors = ["Steven Kipp <sk1pp@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipinfo = "0.1"
futures = "0.3"
tokio = { version = "0.3", features = ["full"] }
iced = { git = "https://github.com/hecrj/iced", features = ["glow"] }
